Bug 466511 - Properties -> Share Tab shows error message that is not understandable
Summary: Properties -> Share Tab shows error message that is not understandable
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-27 08:50 UTC by Waqar Ahmed
Modified: 2023-02-28 16:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Dolphin Properties Dialog (33.68 KB, image/png)
2023-02-27 08:50 UTC, Waqar Ahmed
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Waqar Ahmed 2023-02-27 08:50:15 UTC
Created attachment 156779 [details]
Dolphin Properties Dialog

See the screenshot

"The folder can't be shared because " doesn't exist" ??


SOFTWARE/OS VERSIONS
KDE Frameworks Version: 5.103
Qt Version: 5.15.8
Comment 1 Harald Sitter 2023-02-27 13:08:11 UTC
What's your smb.conf?
Comment 2 Waqar Ahmed 2023-02-27 13:26:45 UTC
Seems like I don't have that file.
Comment 3 Harald Sitter 2023-02-27 14:05:55 UTC
What's the output of 

testparm --suppress-prompt --verbose

and 

testparm --suppress-prompt --verbose --parameter-name "usershare path"
Comment 4 Waqar Ahmed 2023-02-27 14:11:26 UTC
    waqar $ testparm --suppress-prompt --verbose
> Load smb config files from /etc/samba/smb.conf
> Error loading services.

waqar $ testparm --suppress-prompt --verbose --parameter-name "usershare path"
> Load smb config files from /etc/samba/smb.conf
> Error loading services.
Comment 5 Harald Sitter 2023-02-27 14:13:41 UTC
Right, so you literally have no config to speak of. What distro are you on? This seems to me like a broken installation TBH
Comment 6 Waqar Ahmed 2023-02-27 15:12:47 UTC
I am on Manjaro. I can most likely fix the smb.conf issue by installing `manjaro-settings-samba`. 

However, imo the issue with error message remains. It should be different in case the smb.conf or whatever it expects wasn't found.
Comment 7 Harald Sitter 2023-02-27 15:24:42 UTC
Git commit ec1ec56d594dcaf16feb6aac93d4253a94514a81 by Harald Sitter.
Committed on 27/02/2023 at 14:17.
Pushed by sitter into branch 'master'.

handle broken share paths explicitly

lest we display a slightly bogus warning about the empty string not
existing.

M  +9    -2    samba/filepropertiesplugin/groupmanager.cpp

https://invent.kde.org/network/kdenetwork-filesharing/commit/ec1ec56d594dcaf16feb6aac93d4253a94514a81
Comment 8 Waqar Ahmed 2023-02-28 16:14:34 UTC
Git commit 0d31755fd16af563f703049d75f81a2dd0eecf3a by Waqar Ahmed.
Committed on 28/02/2023 at 14:08.
Pushed by waqar into branch 'master'.

Show stderr along with our own error message

M  +6    -1    samba/filepropertiesplugin/groupmanager.cpp

https://invent.kde.org/network/kdenetwork-filesharing/commit/0d31755fd16af563f703049d75f81a2dd0eecf3a