handle broken share paths explicitly

lest we display a slightly bogus warning about the empty string not
existing.

BUG: 466511